# new-view-app

./: .gitignore  Dockerfile  README.md  TODO.txt  pyproject.toml
app/: .env.example  device_sample.py  log_conf.yaml  main.py  middleware.py  snmp_result.json  snmp_sample.py
app/alembic/: env.py
app/alembic/versions/: 2024_10_20_1941-94e61c74c0ac_create_test_tables.py  2024_10_20_2003-c69ad7c2b385_create_test_tables.py  2024_10_22_0027-ec3ef9e57d2d_update_tables.py  2024_10_22_0422-29a6f0c202fa_update_tables2.py  2024_10_22_0427-3b673d00ec21_update_tables3.py  2024_10_26_0745-57e7c4964a02_initial_migration.py  2024_10_28_1500-24f2d1eca0e9_init.py  2024_11_13_1740-769e0f92c626_init_migrations.py  2024_11_14_2212-29ff9609360a_add_switch_id_to_devices.py  2024_11_21_0850-3f4accafe7d7_init_tables.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  auth_route.py  core_switches_route.py  device_control.py  device_route.py  location_route.py  snmp_control.py  switch_route.py
app/core/: config.py
app/core/models/: __init__.py  base.py  core_switch.py  db_helper.py  device.py  excluded_port.py  models.py  switch.py  switch_excluded_port.py
app/core/services/crud/: crud_base.py  crud_core_sw.py  crud_device.py  crud_location.py  crud_switch.py  helpers.py
app/core/services/device_control/: device_controller.py  device_controller_base.py  lin_device_controller.py  user_info_base.py  win_device_controller.py
app/core/services/snmp/: __init__.py  formatter_base.py  (+6 more)
app/schemas/: core_switch.py  device.py  location.py  switch.py  validation_helper.py  vlan.py
